--- a/am-kernels/tests/psram-test/Makefile
+++ b/am-kernels/tests/psram-test/Makefile
@@ -1,3 +1,9 @@
-NAME = minimal-psram
-SRCS = minimal-psram.c
+# PSRAM 测试程序
+# 使用方法：
+#   make NAME=psram-memtest ARCH=riscv32e-ysyxsoc SRAM_RUN=1 run
+#   或者
+#   make NAME=minimal-psram ARCH=riscv32e-ysyxsoc run
+
+NAME ?= psram-memtest
+SRCS = $(NAME).c
 include $(AM_HOME)/Makefile
