--- a/npc/Makefile
+++ b/npc/Makefile
@@ -124,10 +124,20 @@ help:
 	@echo "  run            : 运行仿真（默认不生成波形）"
 	@echo "  run-notrace    : 运行仿真（不生成VCD，节省磁盘空间）"
 	@echo "  wave           : 启用波形跟踪运行仿真并打开 GTKWave"
+	@echo "  synth-ysyx     : Yosys 综合 ysyx_00000000（输出 scripts/synth_output）"
+	@echo "  sta            : 时序分析（OpenSTA 或估算），需先 make synth-ysyx"
 	@echo "  clean          : 清除所有构建产物"
 	@echo "  help           : 显示此帮助信息"
 
 clean:
 	rm -rf $(BUILD_DIR)
 
-.PHONY: default all clean run wave help iverilog
+# Yosys 综合（ysyx_00000000，输出到 scripts/synth_output）
+synth-ysyx:
+	cd scripts && yosys -s synth.ys
+
+# 时序分析：有 OpenSTA 则跑 STA，否则跑时序估算（需先 make synth-ysyx）
+sta:
+	@./scripts/sta/run_sta.sh
+
+.PHONY: default all clean run wave help iverilog synth-ysyx sta
