refactor: 项目清理与重构，添加完整搭建教程
主要更改:
- 删除 docs/, makefile_docs/ 等文档目录
- 删除后端综合相关脚本和输出文件
- 重构 npc/csrc/ 目录结构（分离 common/, npc_soc/, ysyxsoc/）
- 修复 NVBoard 构建问题（添加缺失的头文件和资源）
- 修复 abstract-machine RISC-V 交叉编译工具链路径
- 更新 README.md 添加 Ubuntu 22.04 完整搭建教程

NVBoard 修复:
- 添加 usr/include/pins.h 引脚枚举定义
- 添加 usr/include/nvboard.h API 声明
- 添加 src/at_scancode.h 键盘扫描码
- 添加 resources/font/FreeMono.ttf 字体资源
- 更新 include/nvboard.h 添加函数声明

--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,20 @@ __pycache__/
 
 # Backups
 *_backup_*/
-npc_backup_*/
+*backup*/
 *.bak
 *.old
+
+# Documentation (generated)
+docs/
+makefile_docs/
+
+# Backend (synthesis & STA)
+*.sdc
+synth_output/
+sta/
 
 # Specific generated files
 tags
 cscope.out
+*.csv
