--- a/npc/Makefile
+++ b/npc/Makefile
@@ -35,13 +35,13 @@ $(SRC_AUTO_BIND): $(NXDC_FILES)
 
 # project source (npc_soc configuration)
 VSRCS = $(shell find $(abspath ./vsrc/npc_soc) -name "*.v")
-CSRCS = $(shell find $(abspath ./csrc) -name "*.c" -or -name "*.cc" -or -name "*.cpp")
-# 排除 main_soc.cpp（用于 ysyxSoC 配置）
-CSRCS := $(filter-out $(abspath ./csrc/main_soc.cpp), $(CSRCS))
+# C++ 源文件：npc_soc 专用 + 公共模块
+CSRCS = $(shell find $(abspath ./csrc/npc_soc) -name "*.c" -or -name "*.cc" -or -name "*.cpp")
+CSRCS += $(shell find $(abspath ./csrc/common) -name "*.c" -or -name "*.cc" -or -name "*.cpp")
 # CSRCS += $(SRC_AUTO_BIND) 等到需要nvboard再加上
 
 # rules for verilator
-INCFLAGS = $(addprefix -I, $(INC_PATH))
+INCFLAGS = $(addprefix -I, $(INC_PATH)) -I$(abspath ./csrc/npc_soc) -I$(abspath ./csrc/common) -I$(abspath ./csrc/common/dev)
 # SDL2 flags (via pkg-config; fallback to common defaults)
 SDL2_CFLAGS := $(shell pkg-config --cflags sdl2 2>/dev/null)
 SDL2_LDFLAGS := $(shell pkg-config --libs sdl2 2>/dev/null)
@@ -117,27 +117,17 @@ wave: $(BIN)
 
 # 添加 help 目标 - 显示可用命令
 help:
-	@echo "NPC Makefile 帮助"
-	@echo "================="
+	@echo "NPC Makefile 帮助 (npc_soc 独立仿真配置)"
+	@echo "========================================="
 	@echo "可用目标："
-	@echo "  default, all   : 构建仿真可执行文件（默认不生成波形）"
-	@echo "  run            : 运行仿真（默认不生成波形）"
-	@echo "  run-notrace    : 运行仿真（不生成VCD，节省磁盘空间）"
-	@echo "  wave           : 启用波形跟踪运行仿真并打开 GTKWave"
-	@echo "  synth-ysyx     : Yosys 综合 ysyx_00000000（输出 scripts/synth_output）"
-	@echo "  sta            : 时序分析（OpenSTA 或估算），需先 make synth-ysyx"
+	@echo "  default, all   : 构建仿真可执行文件"
+	@echo "  run            : 运行仿真"
+	@echo "  run-notrace    : 运行仿真（不生成VCD）"
+	@echo "  wave           : 运行仿真并打开 GTKWave"
 	@echo "  clean          : 清除所有构建产物"
 	@echo "  help           : 显示此帮助信息"
 
 clean:
 	rm -rf $(BUILD_DIR)
 
-# Yosys 综合（ysyx_00000000，输出到 scripts/synth_output）
-synth-ysyx:
-	cd scripts && yosys -s synth.ys
-
-# 时序分析：有 OpenSTA 则跑 STA，否则跑时序估算（需先 make synth-ysyx）
-sta:
-	@./scripts/sta/run_sta.sh
-
-.PHONY: default all clean run wave help iverilog synth-ysyx sta
+.PHONY: default all clean run wave help
